--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -72,7 +72,7 @@
             android:layout_height="52.0dip"
             android:layout_weight="1.0"
             android:gravity="center"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/guide_cart_nm" />
     </LinearLayout>
 
     <LinearLayout
