--- a/app/src/main/res/layout/activity_goods.xml
+++ b/app/src/main/res/layout/activity_goods.xml
@@ -48,9 +48,9 @@
         android:background="#bfbfbf" />
 
     <FrameLayout
-        android:layout_width="fill_parent"
-        android:layout_height="0.0dip"
-        android:layout_weight="2.0">
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <com.example.sanfuproject.activity.view.ScrollViewContainer
             android:id="@+id/goods_drtial_new_scrollviewcontainer"
@@ -76,27 +76,21 @@
                         <android.support.v4.view.ViewPager
                             android:id="@+id/goods_detail_new_vpg_image_scroll"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
+                            android:layout_height="360dp" />
 
-                        <RelativeLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="fill_parent"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:id="@+id/goods_detail_new_lly_dot"
-                                android:layout_width="fill_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentBottom="true"
-                                android:layout_marginBottom="20.0dip"
-                                android:gravity="center_horizontal"
-                                android:orientation="horizontal" />
-                        </RelativeLayout>
+                        <LinearLayout
+                            android:id="@+id/goods_detail_new_lly_dot"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:layout_marginBottom="20.0dip"
+                            android:gravity="center_horizontal"
+                            android:orientation="horizontal" />
                     </FrameLayout>
 
                     <TextView
                         android:id="@+id/goods_detail_new_txv_goods_name"
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10.0dip"
                         android:layout_marginRight="10.0dip"
@@ -121,7 +115,7 @@
                             android:ellipsize="end"
                             android:lines="1"
                             android:maxLines="1"
-                            android:text="\#买的越多积分就越多哦！"
+                            android:text="#买的越多积分就越多哦！"
                             android:textColor="#ffff9e31"
                             android:textSize="14.0sp" />
 
@@ -199,6 +193,7 @@
                             android:ellipsize="end"
                             android:lines="1"
                             android:maxLines="1"
+                            android:text="VIP价:"
                             android:textSize="13.0sp" />
                     </LinearLayout>
 
@@ -214,30 +209,20 @@
                         android:textColor="#ffff9e31"
                         android:textSize="13.0sp" />
 
-                    <TextView
-                        android:id="@+id/goods_detail_new_txv_axis"
-                        android:layout_width="fill_parent"
-                        android:layout_height="35.0dip"
-                        android:layout_marginLeft="10.0dip"
-                        android:layout_marginRight="10.0dip"
-                        android:gravity="center_vertical"
-                        android:lines="1"
-                        android:maxLines="1" />
-
                     <View
                         android:layout_width="fill_parent"
                         android:layout_height="1.0dip"
                         android:background="#bfbfbf" />
 
-                    <ListView
+                    <com.example.sanfuproject.activity.view.MyListView
                         android:id="@+id/goods_detial_new_lsv_active"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12.0dip"
-                        android:layout_marginTop="12.0dip"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
                         android:cacheColorHint="#00000000"
                         android:divider="#00000000"
-                        android:dividerHeight="3.0dip"
+                        android:dividerHeight="3dp"
                         android:scrollbars="none" />
 
                     <View
@@ -281,7 +266,7 @@
                             android:layout_height="fill_parent"
                             android:layout_weight="1.0"
                             android:gravity="center"
-                            android:text="商品评价(200)" />
+                            android:text="商品评价(1)" />
 
                         <View
                             android:layout_width="1.0dip"
@@ -328,16 +313,12 @@
                             android:layout_weight="1.0"
                             android:text="选择商品颜色,尺码" />
 
-                        <TextView
+                        <ImageView
                             android:id="@+id/goods_detail_new_tex_selected_size_and_color"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/abs__ic_more" />
                     </LinearLayout>
-
-                    <View
-                        android:layout_width="fill_parent"
-                        android:layout_height="1.0dip"
-                        android:background="#bfbfbf" />
 
                     <View
                         android:layout_width="fill_parent"
@@ -359,10 +340,11 @@
                             android:layout_weight="1.0"
                             android:text="产品参数" />
 
-                        <TextView
+                        <ImageView
                             android:id="@+id/goods_detail_new_tev_shopping_items"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/abs__ic_more" />
                     </LinearLayout>
 
                     <View
@@ -371,61 +353,9 @@
                         android:background="#bfbfbf" />
 
                     <LinearLayout
-                        android:id="@+id/goods_detail_new_liy_shopping_youhuidapei"
-                        android:layout_width="fill_parent"
-                        android:layout_height="40.0dip"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal"
-                        android:paddingLeft="10.0dip"
-                        android:paddingRight="10.0dip"
-                        android:visibility="gone">
-
-                        <TextView
-                            android:layout_width="0.0dip"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1.0"
-                            android:text="优惠搭配"
-                            android:textColor="#ffb0b0b0" />
-
-                        <TextView
-                            android:id="@+id/goods_detail_new_tev_shopping_youhuidapei"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="fill_parent"
-                        android:layout_height="1.0dip"
-                        android:background="#bfbfbf" />
-
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="120.0dip"
-                        android:layout_marginLeft="10.0dip"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal"
-                        android:visibility="gone">
-
-                        <ImageView
-                            android:layout_width="100.0dip"
-                            android:layout_height="100.0dip" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="5.0dip"
-                            android:text="+"
-                            android:textSize="18.0sp" />
-
-                        <ImageView
-                            android:layout_width="100.0dip"
-                            android:layout_height="100.0dip" />
-                    </LinearLayout>
-
-                    <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="60.0dip"
-                        android:background="#bfbfbf"
+                        android:background="#66bfbfbf"
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
                         android:padding="10.0dip">
@@ -434,23 +364,22 @@
                             android:layout_width="0.0dip"
                             android:layout_height="1.0dip"
                             android:layout_weight="1.0"
-                            android:background="#bfbfbf" />
+                            android:background="#000000" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="60.0dip"
                             android:layout_marginLeft="10.0dip"
                             android:layout_marginRight="10.0dip"
-                            android:background="#bfbfbf"
                             android:gravity="center"
                             android:text="继续拖动,查看图文详情"
-                            android:textColor="#bfbfbf" />
+                            android:textColor="#000000" />
 
                         <View
                             android:layout_width="0.0dip"
                             android:layout_height="1.0dip"
                             android:layout_weight="1.0"
-                            android:background="#bfbfbf" />
+                            android:background="#000000" />
                     </LinearLayout>
                 </LinearLayout>
             </ScrollView>
@@ -458,6 +387,9 @@
             <ScrollView
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
                 android:background="#bfbfbf"
                 android:scrollbars="none">
 
@@ -471,26 +403,6 @@
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content" />
 
-                    <View
-                        android:layout_width="fill_parent"
-                        android:layout_height="5.0dip"
-                        android:background="#bfbfbf" />
-
-                    <LinearLayout
-                        android:id="@+id/goods_detial_new_lny_xuangou"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:visibility="gone">
-
-                        <TextView
-                            android:layout_width="fill_parent"
-                            android:layout_height="40.0dip"
-                            android:gravity="center"
-                            android:text="为您优选" />
-
-
-                    </LinearLayout>
                 </LinearLayout>
             </ScrollView>
         </com.example.sanfuproject.activity.view.ScrollViewContainer>
@@ -530,43 +442,16 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <TextView
+                <ImageView
                     android:id="@+id/goods_detail_new_txv_customer_service"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="35dp"
+                    android:src="@mipmap/ic_launcher" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="客服"
-                    android:textSize="10.0sp" />
-            </LinearLayout>
-
-            <View
-                android:layout_width="0.5dip"
-                android:layout_height="40.0dip"
-                android:layout_gravity="center"
-                android:background="#bfbfbf"
-                android:visibility="gone" />
-
-            <LinearLayout
-                android:id="@+id/goods_detail_new_linearlayout_share"
-                android:layout_width="0.0dip"
-                android:layout_height="50.0dip"
-                android:layout_weight="1.0"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:visibility="gone">
-
-                <TextView
-                    android:id="@+id/goods_detail_new_txv_sharero"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="分享"
                     android:textSize="10.0sp" />
             </LinearLayout>
 
@@ -584,10 +469,11 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <TextView
+                <ImageView
                     android:id="@+id/goods_detail_new_txv_collection"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="35dp"
+                    android:src="@mipmap/ic_launcher" />
 
                 <TextView
                     android:id="@+id/goods_detail_new_txv_collection_txt"
