--- a/app/src/main/res/layout/childfrag_listview.xml
+++ b/app/src/main/res/layout/childfrag_listview.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.example.sanfuproject.activity.view.MyListView
+    <ListView
         android:id="@+id/child_listView"
         android:layout_width="match_parent"
-        android:scrollbars="none"
-        android:layout_height="wrap_content"></com.example.sanfuproject.activity.view.MyListView>
+        android:layout_height="wrap_content"
+        android:scrollbars="none"></ListView>
 </LinearLayout>
