--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,8 @@
             android:background="@android:color/white">
 
             <ImageView
+                android:clickable="true"
+                android:id="@+id/exit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -144,6 +146,7 @@
             android:layout_marginTop="20.0dip">
 
             <ImageView
+                android:clickable="true"
                 android:id="@+id/weix_login_img"
                 android:layout_width="50.0dip"
                 android:layout_height="50.0dip"
