--- a/app/src/main/res/layout/fresh_grid_item.xml
+++ b/app/src/main/res/layout/fresh_grid_item.xml
@@ -7,9 +7,8 @@
 
     <ImageView
         android:id="@+id/fresh_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:src="@mipmap/ic_launcher" />
 
     <TextView
