--- a/app/src/main/res/layout/goods_detail.xml
+++ b/app/src/main/res/layout/goods_detail.xml
@@ -19,27 +19,23 @@
             android:layout_width="0.0dip"
             android:layout_height="52.0dip"
             android:layout_weight="1.0"
-            android:drawableLeft="@drawable/abs__ic_back"
             android:ellipsize="end"
             android:gravity="center|left"
             android:maxLines="1"
-            android:singleLine="true"
-            android:text="商品详情" />
+            android:singleLine="true" />
 
         <TextView
             android:id="@+id/goods_detail_new_txv_cart"
             android:layout_width="wrap_content"
             android:layout_height="52.0dip"
-            android:gravity="center_vertical"
-            android:text="首页" />
+            android:gravity="center_vertical" />
 
         <TextView
             android:id="@+id/goods_detail_new_txv_dot"
             android:layout_width="wrap_content"
             android:layout_height="52.0dip"
             android:layout_marginLeft="10.0dip"
-            android:gravity="center_vertical"
-            android:text="分享" />
+            android:gravity="center_vertical" />
     </LinearLayout>
 
     <View
@@ -75,8 +71,8 @@
 
                         <android.support.v4.view.ViewPager
                             android:id="@+id/goods_detail_new_vpg_image_scroll"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
+                            android:layout_width="fill_parent"
+                            android:layout_height="fill_parent" />
 
                         <RelativeLayout
                             android:layout_width="fill_parent"
